k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eveil-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eveil
  template:
    metadata:
      labels:
        app: eveil
    spec:
      serviceAccountName: eveil-sa # Ajouté ici
      containers:
        - name: eveil-container
          image: eveil-du-code:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources: # Ajouté ici
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /api/status
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/status
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
